[gd_scene load_steps=104 format=2]

[ext_resource path="res://UI/Menu/NewMainMenu/Main_Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainMenu/Menu.gd" type="Script" id=2]
[ext_resource path="res://UI/Menu/OptionsMenu/Options_Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main/saveManager.gd" type="Script" id=4]
[ext_resource path="res://Assets/MusicAndSounds/BGM/TitleMenuAndMainMenu.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Fonts/GreatVibes-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0007.png" type="Texture" id=7]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0025.png" type="Texture" id=8]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0027.png" type="Texture" id=9]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0028.png" type="Texture" id=10]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0029.png" type="Texture" id=11]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0026.png" type="Texture" id=12]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0033.png" type="Texture" id=13]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0039.png" type="Texture" id=14]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0002.png" type="Texture" id=15]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0011.png" type="Texture" id=16]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0017.png" type="Texture" id=17]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0023.png" type="Texture" id=18]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0030.png" type="Texture" id=19]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0004.png" type="Texture" id=20]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0006.png" type="Texture" id=21]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0032.png" type="Texture" id=22]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0024.png" type="Texture" id=23]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0034.png" type="Texture" id=24]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0035.png" type="Texture" id=25]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0016.png" type="Texture" id=26]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0019.png" type="Texture" id=27]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0031.png" type="Texture" id=28]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0037.png" type="Texture" id=29]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0020.png" type="Texture" id=30]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0003.png" type="Texture" id=31]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0008.png" type="Texture" id=32]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0009.png" type="Texture" id=33]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0013.png" type="Texture" id=34]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0001.png" type="Texture" id=35]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0014.png" type="Texture" id=36]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0015.png" type="Texture" id=37]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0021.png" type="Texture" id=38]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0022.png" type="Texture" id=39]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0036.png" type="Texture" id=40]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0038.png" type="Texture" id=41]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0005.png" type="Texture" id=42]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0010.png" type="Texture" id=43]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0012.png" type="Texture" id=44]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0018.png" type="Texture" id=45]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0050.png" type="Texture" id=46]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0045.png" type="Texture" id=47]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0049.png" type="Texture" id=48]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0052.png" type="Texture" id=49]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0040.png" type="Texture" id=50]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0042.png" type="Texture" id=51]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0043.png" type="Texture" id=52]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0041.png" type="Texture" id=53]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0046.png" type="Texture" id=54]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0048.png" type="Texture" id=55]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0044.png" type="Texture" id=56]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0047.png" type="Texture" id=57]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0051.png" type="Texture" id=58]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0079.png" type="Texture" id=59]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0065.png" type="Texture" id=60]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0078.png" type="Texture" id=61]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0058.png" type="Texture" id=62]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0062.png" type="Texture" id=63]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0080.png" type="Texture" id=64]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0053.png" type="Texture" id=65]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0064.png" type="Texture" id=66]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0056.png" type="Texture" id=67]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0077.png" type="Texture" id=68]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0063.png" type="Texture" id=69]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0057.png" type="Texture" id=70]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0081.png" type="Texture" id=71]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0068.png" type="Texture" id=72]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0066.png" type="Texture" id=73]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0076.png" type="Texture" id=74]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0072.png" type="Texture" id=75]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0055.png" type="Texture" id=76]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0061.png" type="Texture" id=77]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0067.png" type="Texture" id=78]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0069.png" type="Texture" id=79]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0075.png" type="Texture" id=80]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0082.png" type="Texture" id=81]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0054.png" type="Texture" id=82]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0073.png" type="Texture" id=83]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0060.png" type="Texture" id=84]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0070.png" type="Texture" id=85]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0059.png" type="Texture" id=86]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0071.png" type="Texture" id=87]
[ext_resource path="res://UI/MainMenu/newBookBackground/Boss_Spike_Anim.glb0074.png" type="Texture" id=88]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.117318, 0.223464, 0.318436, 0.692737 )
colors = PoolColorArray( 1, 1, 1, 1, 0.945313, 0.985609, 1, 0.682353, 0.411765, 0.627757, 1, 0.682353, 0.109804, 0.333333, 1, 0.682353, 0, 0, 0, 0.0196078 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 5 )
width = 128
height = 128
fill = 1
fill_to = Vector2( 1, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.00645161, 0.341935, 0.522581, 0.703226, 0.935484 )
colors = PoolColorArray( 1, 1, 1, 1, 0.197565, 0.779982, 0.991699, 0, 0.300781, 0.649708, 1, 1, 0.0869141, 0, 1, 1, 0.461914, 0, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.37
emission_shape = 2
emission_box_extents = Vector3( 200, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
initial_velocity = 69.31
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 16 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0.631285, 0.988827, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0614525, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=15]
gradient = SubResource( 17 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.508621, 0.524785 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.960894 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 653
height = 377

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 15 ), ExtResource( 31 ), ExtResource( 20 ), ExtResource( 42 ), ExtResource( 21 ), ExtResource( 7 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 43 ), ExtResource( 16 ), ExtResource( 44 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 45 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 40 ), ExtResource( 29 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 56 ), ExtResource( 47 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 58 ), ExtResource( 49 ), ExtResource( 65 ), ExtResource( 82 ), ExtResource( 76 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 62 ), ExtResource( 86 ), ExtResource( 84 ), ExtResource( 77 ), ExtResource( 63 ), ExtResource( 69 ), ExtResource( 66 ), ExtResource( 60 ), ExtResource( 73 ), ExtResource( 78 ), ExtResource( 72 ), ExtResource( 79 ), ExtResource( 85 ), ExtResource( 87 ), ExtResource( 75 ), ExtResource( 83 ), ExtResource( 88 ), ExtResource( 80 ), ExtResource( 74 ), ExtResource( 68 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 64 ), ExtResource( 71 ), ExtResource( 81 ) ],
"loop": false,
"name": "openBook",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 32
outline_size = 1
outline_color = Color( 0.678431, 0.678431, 0.678431, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "flipPage"
length = 0.75
step = 0.024
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.024, 0.048, 0.072, 0.096, 0.12, 0.144, 0.168, 0.192, 0.216, 0.24, 0.264, 0.288, 0.312, 0.336, 0.36, 0.384, 0.408, 0.432, 0.456, 0.48, 0.504, 0.528, 0.552, 0.576, 0.6, 0.624, 0.648, 0.672, 0.696 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )
optionsMenuTemplate = ExtResource( 3 )

[node name="ColorRectBG" type="ColorRect" parent="."]
margin_top = -7.0
margin_right = 2290.0
margin_bottom = 1505.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -3.0
margin_top = 371.0
margin_right = 125.0
margin_bottom = 499.0
rect_rotation = 270.0
texture = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 1, 362 )
rotation = -2.24388
amount = 200
lifetime = 10.0
process_material = SubResource( 2 )
texture = SubResource( 15 )

[node name="BlackCover" type="TextureRect" parent="."]
margin_right = 653.0
margin_bottom = 377.0
texture = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer"]
scale = Vector2( 0.335, 0.335 )
frames = SubResource( 18 )
animation = "openBook"
centered = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 380.0
margin_top = 90.0
margin_right = 530.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Power of Goo"
align = 1
valign = 1

[node name="Main_Menu" parent="CanvasLayer/Control" instance=ExtResource( 1 )]

[node name="PressAnyButton" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -163.0
margin_top = -41.0
margin_right = 163.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Press a Button"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
anims/fade_in = SubResource( 20 )
anims/flipPage = SubResource( 21 )

[node name="Libraries" type="Node2D" parent="."]

[node name="saveManager" type="Node2D" parent="Libraries"]
script = ExtResource( 4 )

[connection signal="animation_finished" from="CanvasLayer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="CanvasLayer/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="continueGame" from="CanvasLayer/Control/Main_Menu" to="." method="_on_Main_Menu_continueGame"]
[connection signal="newGame" from="CanvasLayer/Control/Main_Menu" to="." method="_on_Main_Menu_newGame"]
[connection signal="options" from="CanvasLayer/Control/Main_Menu" to="." method="_on_Main_Menu_options"]
[connection signal="quit" from="CanvasLayer/Control/Main_Menu" to="." method="_on_Main_Menu_quit"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
